--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ if (TARGET tinyusb_device)
 			cmpdata.c
 			error.c
 			memory.c
+			class.c
 		)
 
 	# Pull in our pico_stdlib which aggregates commonly used features
