--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,15 @@
+cmake_minimum_required(VERSION 3.12)
+
+# Pull in SDK (must be before project)
+include(pico_sdk_import.cmake)
+
+project(lcd-lib C CXX ASM)
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
+
+# Initialize the SDK
+pico_sdk_init()
+
 if (TARGET tinyusb_device)
 	add_executable(kmbasic
 			kmbasic.c
@@ -34,8 +46,6 @@ if (TARGET tinyusb_device)
 	# create map/bin/hex/uf2 file etc.
 	pico_add_extra_outputs(kmbasic)
 
-	# add url via pico_set_program_url
-	example_auto_set_url(kmbasic)
 elseif(PICO_ON_DEVICE)
 	message(WARNING "not building kmbasic because TinyUSB submodule is not initialized in the SDK")
 endif()
