--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ if (TARGET tinyusb_device)
 			interface/ili9341_spi.c
 			interface/ff.c
 			interface/pico-sdmm.c
+			interface/fileselect.c
 		)
 
 	# Pull in our pico_stdlib which aggregates commonly used features
