--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,6 +45,8 @@ if (TARGET tinyusb_device)
 
 	# Pull in our pico_stdlib which aggregates commonly used features
 	target_link_libraries(phyllosoma pico_stdlib hardware_spi)
+	target_link_libraries(phyllosoma pico_stdlib hardware_pwm)
+	target_link_libraries(phyllosoma pico_stdlib hardware_adc)
 
 	# enable usb output, disable uart output
 	pico_enable_stdio_usb(phyllosoma 1)
