--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ if (TARGET tinyusb_device)
 			timer.c
 			io.c
 			music.c
+			core1.c
 			debug.c
 			interface/fontdata.c
 			interface/graphlib.c
@@ -46,11 +47,11 @@ if (TARGET tinyusb_device)
 
 	# Pull in our pico_stdlib which aggregates commonly used features
 	target_link_libraries(phyllosoma pico_stdlib)
+	target_link_libraries(phyllosoma pico_multicore)
 	target_link_libraries(phyllosoma hardware_spi)
 	target_link_libraries(phyllosoma hardware_pwm)
 	target_link_libraries(phyllosoma hardware_adc)
 	target_link_libraries(phyllosoma hardware_i2c)
-
 	# enable usb output, disable uart output
 	pico_enable_stdio_usb(phyllosoma 1)
 	pico_enable_stdio_uart(phyllosoma 0)
