--- a/scripts/MACHIKAP.INI
+++ b/scripts/MACHIKAP.INI
@@ -18,3 +18,9 @@ HORIZONTAL # same as LCD0TURN
 
 USBSERIALON
 # USBSERIALOFF
+
+
+# Decide if wait for 2.5 seconds in the beginning in debug mode
+
+DEBUGWAIT2500
+# NODEBUGWAIT2500
