Rotate buttons assignments when vertical LCD mode

--- a/scripts/MACHIKAP.INI
+++ b/scripts/MACHIKAP.INI
@@ -14,6 +14,12 @@ HORIZONTAL # same as LCD0TURN
 # LCD90TURN
 
 
+# Decide if rotate button asignment when LCD vertical setting
+
+ROTATEBUTTONS
+# NOROTATEBUTTONS
+
+
 # Decide if output to USB serial port
 
 USBSERIALON
