LCDOUTON/LCDOUTOFF option in INI file

--- a/scripts/MACHIKAP.INI
+++ b/scripts/MACHIKAP.INI
@@ -26,6 +26,12 @@ USBSERIALON
 # USBSERIALOFF
 
 
+# Decide if output to LCD
+
+LCDOUTON
+# LCDOUTOFF
+
+
 # Decide if wait for 2.5 seconds in the beginning in debug mode
 
 DEBUGWAIT2500
