Flexible waiting time at the beginning

--- a/scripts/MACHIKAP.INI
+++ b/scripts/MACHIKAP.INI
@@ -42,3 +42,8 @@ DEBUGWAIT2500
 
 LOOPATEND
 # RESETATEND
+
+
+# Waiting time at the beginnig in milli seconds (must be more than 499)
+
+STARTWAIT=500
