--- a/pcconnect/connect.ini
+++ b/pcconnect/connect.ini
@@ -1,7 +1,7 @@
 # INI file for connect application
 
 # Serial port definition for connecting MachiKania type P
-SERIALPORT=/dev/ttyS2
+SERIALPORT=/dev/ttyDUMMY
 
 # Baud setting
 BAUD=115200
