--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,11 +7,17 @@ project(lcd-lib C CXX ASM)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 
+# USBKBMODE
+# 1:     Build USB keyboard and text editor mode
+# other: Build PC-Connect mode
+set(USBKBMODE 0)
+
 # Initialize the SDK
 pico_sdk_init()
 
 if (TARGET tinyusb_device)
-	add_executable(phyllosoma
+	if(USBKBMODE EQUAL 1)
+		add_executable(phyllosoma
 			main.c
 			api.c
 			library.c
@@ -50,7 +56,43 @@ if (TARGET tinyusb_device)
 			interface/hid_virtual_keytable.c
 			interface/keyinput.c
 		)
-
+	else()
+		add_executable(phyllosoma
+			main.c
+			api.c
+			library.c
+			compiler.c
+			run.c
+			statements.c
+			functions.c
+			integer.c
+			float.c
+			string.c
+			globalvars.c
+			variable.c
+			operators.c
+			value.c
+			cmpdata.c
+			error.c
+			memory.c
+			class.c
+			file.c
+			display.c
+			timer.c
+			io.c
+			music.c
+			core1.c
+			pcconnect.c
+			hexfile.c
+			debug.c
+			interface/fontdata.c
+			interface/graphlib.c
+			interface/ili9341_spi.c
+			interface/ff.c
+			interface/pico-sdmm.c
+			interface/fileselect.c
+		)
+	endif()
 	# Pull in our pico_stdlib which aggregates commonly used features
 	target_link_libraries(phyllosoma pico_stdlib)
 	target_link_libraries(phyllosoma pico_multicore)
@@ -58,11 +100,18 @@ if (TARGET tinyusb_device)
 	target_link_libraries(phyllosoma hardware_pwm)
 	target_link_libraries(phyllosoma hardware_adc)
 	target_link_libraries(phyllosoma hardware_i2c)
-	target_link_libraries(phyllosoma tinyusb_board)
-	target_link_libraries(phyllosoma tinyusb_host)
-	target_include_directories(phyllosoma PRIVATE ${CMAKE_CURRENT_LIST_DIR}/interface)
+	if(USBKBMODE EQUAL 1)
+		target_link_libraries(phyllosoma tinyusb_board)
+		target_link_libraries(phyllosoma tinyusb_host)
+		target_include_directories(phyllosoma PRIVATE ${CMAKE_CURRENT_LIST_DIR}/interface)
+	endif()
+
 	# enable usb output, disable uart output
-	pico_enable_stdio_usb(phyllosoma 0)
+	if(USBKBMODE EQUAL 1)
+		pico_enable_stdio_usb(phyllosoma 0)
+	else()
+		pico_enable_stdio_usb(phyllosoma 1)
+	endif()
 	pico_enable_stdio_uart(phyllosoma 0)
 
 	# create map/bin/hex/uf2 file etc.
