File-select without USB keyboard

--- a/scripts/MACHIKAP.INI
+++ b/scripts/MACHIKAP.INI
@@ -47,3 +47,9 @@ LOOPATEND
 # Waiting time at the beginnig in milli seconds (must be more than 499)
 
 STARTWAIT=500
+
+
+# Waiting time for USB keyboard connection in milli seconds (0: infinite)
+
+#WAIT4KEYBOARD=0
+WAIT4KEYBOARD=2000
