add MACHIKAP.INI keyboard config

--- a/scripts/MACHIKAP.INI
+++ b/scripts/MACHIKAP.INI
@@ -53,3 +53,19 @@ STARTWAIT=500
 
 #WAIT4KEYBOARD=0
 WAIT4KEYBOARD=2000
+
+
+# Specify the keyboard type
+# Enable the keyword below
+
+106KEY    # Japanese Keyboard
+# 101KEY    # US Keyboard
+
+
+# Setup Lock keys' status
+# Comment out if not lock
+# the key when initializing
+
+NUMLOCK     # Num Lock Key
+CAPSLOCK    # Caps Lock Key
+# SCRLLOCK    # Scroll Lock Key
