Enable SPI settings in IN file

--- a/scripts/MACHIKAP.INI
+++ b/scripts/MACHIKAP.INI
@@ -69,3 +69,12 @@ WAIT4KEYBOARD=2000
 NUMLOCK     # Num Lock Key
 CAPSLOCK    # Caps Lock Key
 # SCRLLOCK    # Scroll Lock Key
+
+
+# Specify SPI pins used for embed projects
+# Comment out for default settings
+# Useful for small RP2040 boards like XIAO RP2040, RP2040-Zero, and Tiny-2040
+
+# SPIMISO=4
+# SPIMOSI=7
+# SPICLK=6
