Revise MACHIKANIA.INI for wifi and RTC

--- a/scripts/MACHIKAP.INI
+++ b/scripts/MACHIKAP.INI
@@ -78,3 +78,42 @@ CAPSLOCK    # Caps Lock Key
 # SPIMISO=4
 # SPIMOSI=7
 # SPICLK=6
+
+
+# Use Real Time Clock (RTC) for saving files by file system
+# If RTC is not use, timestamp of save file will be 2020/01/01
+# Remove comment to enable RTC for file system in following line
+
+#RTCFILE
+
+# Timezone used for RTC setting by NTP
+
+# 9 # JST
+# 8.5 # ACST
+# 5.75 # Nepal Standard Time
+0 # UTC
+# -8 # PST
+# -7 # PDT
+# -5 # EST
+# -4 # EDT
+
+
+# Connect to wifi when starting (Pico W only)
+
+# USEWIFI
+
+# Set contry code for wifi connection
+
+WIFICOUNTRY=JP
+# WIFICONTRY=US
+
+
+# Define wifi SSID and password (Pico W only)
+
+# WIFISSID=xxxx
+# WIFIPASSWD=xxxx
+
+
+# Define NTP server (Pico W only)
+
+NTPSERVER=pool.ntp.org
