--- a/scripts/MACHIKAP.INI
+++ b/scripts/MACHIKAP.INI
@@ -88,14 +88,14 @@ CAPSLOCK    # Caps Lock Key
 
 # Timezone used for RTC setting by NTP
 
-# 9 # JST
-# 8.5 # ACST
-# 5.75 # Nepal Standard Time
-0 # UTC
-# -8 # PST
-# -7 # PDT
-# -5 # EST
-# -4 # EDT
+# TIMEZONE=9 # JST
+# TIMEZONE=8.5 # ACST
+# TIMEZONE=5.75 # Nepal Standard Time
+TIMEZONE=0 # UTC
+# TIMEZONE=-8 # PST
+# TIMEZONE=-7 # PDT
+# TIMEZONE=-5 # EST
+# TIMEZONE=-4 # EDT
 
 
 # Connect to wifi when starting (Pico W only)
