Connect to NTP server when powered on

--- a/scripts/MACHIKAP.INI
+++ b/scripts/MACHIKAP.INI
@@ -84,7 +84,7 @@ CAPSLOCK    # Caps Lock Key
 # If RTC is not use, timestamp of save file will be 2020/01/01
 # Remove comment to enable RTC for file system in following line
 
-#RTCFILE
+# RTCFILE
 
 # Timezone used for RTC setting by NTP
 
@@ -117,3 +117,9 @@ WIFICOUNTRY=JP
 # Define NTP server (Pico W only)
 
 NTPSERVER=pool.ntp.org
+
+
+# Enable following line to connect to NTP server in the beginning after power on (Pico W only)
+# Make sure that USEWIFI is enabled when using this feature
+
+# INITIALNTP
