--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ if (TARGET tinyusb_device)
 			wifi/withwifi.c
 			wifi/wifierror.c
 			wifi/picow_ntp_client.c
+			wifi/picow_tcp_client.c
 		)
 		target_link_libraries(wifi_files
 			pico_cyw43_arch_lwip_threadsafe_background
