Several options when exception happened

--- a/scripts/MACHIKAP.INI
+++ b/scripts/MACHIKAP.INI
@@ -49,6 +49,13 @@ LOOPATEND
 STARTWAIT=500
 
 
+# What to do when an exception occurs
+
+# EXCRESET # Reset Machikania (default: off)
+# EXCSCREENSHOT=EXCSCRS.BIN # Save screen shot as a file (default: off)
+# EXCDUMP=EXDUMP.BIN # Dump memory to a file (default: off)
+
+
 # Waiting time for USB keyboard connection in milli seconds (0: infinite)
 
 #WAIT4KEYBOARD=0
