Add "HOSTNAME=" in MACHIKAP.INI. Revise document.

--- a/scripts/MACHIKAP.INI
+++ b/scripts/MACHIKAP.INI
@@ -121,6 +121,11 @@ WIFICOUNTRY=JP
 # WIFIPASSWD=xxxx
 
 
+# Define hostname (Pico W only; default: PicoW)
+
+# HOSTNAME=machikania
+
+
 # Define NTP server (Pico W only)
 
 NTPSERVER=pool.ntp.org
