Add "STATICIP=" option in MACHIKAP.INI

--- a/scripts/MACHIKAP.INI
+++ b/scripts/MACHIKAP.INI
@@ -121,6 +121,11 @@ WIFICOUNTRY=JP
 # WIFIPASSWD=xxxx
 
 
+# Define static IP address (default off; DHCP server provide it)
+
+# STATICIP=192.168.1.100
+
+
 # Define hostname (Pico W only; default: PicoW)
 
 # HOSTNAME=machikania
