Revise MACHIKAP.INI for WIFICOUNTRY

--- a/scripts/MACHIKAP.INI
+++ b/scripts/MACHIKAP.INI
@@ -109,10 +109,11 @@ TIMEZONE=0 # UTC
 
 # USEWIFI
 
-# Set contry code for wifi connection
+
+# Set country code for wifi connection (Pico W only)
 
 WIFICOUNTRY=JP
-# WIFICONTRY=US
+# WIFICOUNTRY=US
 
 
 # Define wifi SSID and password (Pico W only)
