Revise CMakeLists.txt for building XIAO; Add check_config.php to check configure statuses of binaries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,7 +139,8 @@ if (TARGET tinyusb_device)
 	target_compile_definitions(shared_files PUBLIC MACHIKANIA_CONFIG="./config/${MACHIKANIA_BUILD}.h")
 	target_compile_definitions(wifi_files PUBLIC MACHIKANIA_CONFIG="./config/${MACHIKANIA_BUILD}.h")
 	if (MACHIKANIA_DEBUG_MODE)
-		target_compile_definitions(shared_files PRIVATE MACHIKANIA_DEBUG_MODE)
+		target_compile_definitions(shared_files PUBLIC MACHIKANIA_DEBUG_MODE)
+		target_compile_definitions(wifi_files PUBLIC MACHIKANIA_DEBUG_MODE)
 	endif()
 	if (MACHIKANIA_WIFI STREQUAL "withwifi")
 		target_compile_definitions(wifi_files PUBLIC PICO_STACK_SIZE=4096)
