support show timestamp, change sort order, hide system directory, show HTM, when file selecting

--- a/scripts/MACHIKAP.INI
+++ b/scripts/MACHIKAP.INI
@@ -136,3 +136,10 @@ NTPSERVER=pool.ntp.org
 # Make sure that USEWIFI is enabled when using this feature
 
 # INITIALNTP
+
+# Enable following line to show timestamp when selecting files
+# SHOWTIMESTAMP
+
+# Sort order when selecting files
+# 0:A...Z 1:NEW...OLD 2:Z...A 3:OLD...NEW
+FILESORTBY=0
