change FILESORTBY definition, change operation when selecting files

--- a/scripts/MACHIKAP.INI
+++ b/scripts/MACHIKAP.INI
@@ -141,5 +141,5 @@ NTPSERVER=pool.ntp.org
 # SHOWTIMESTAMP
 
 # Sort order when selecting files
-# 0:A...Z 1:NEW...OLD 2:Z...A 3:OLD...NEW
+# 0:A...Z 1:Z...A 2:OLD...NEW 3:NEW...OLD
 FILESORTBY=0
