--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -154,6 +154,7 @@ if (TARGET tinyusb_device)
 	if (MACHIKANIA_DEBUG_MODE)
 		target_compile_definitions(shared_files PUBLIC MACHIKANIA_DEBUG_MODE)
 		target_compile_definitions(wifi_files PUBLIC MACHIKANIA_DEBUG_MODE)
+		target_compile_definitions(aux_files PUBLIC MACHIKANIA_DEBUG_MODE)
 	endif()
 	if (MACHIKANIA_WIFI STREQUAL "withwifi")
 		target_compile_definitions(wifi_files PUBLIC PICO_STACK_SIZE=4096)
