Use 256 kbytes larger area in RP2350 than RP2040

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,10 +139,7 @@ if (TARGET tinyusb_device)
 	pico_add_extra_outputs(phyllosoma)
 
 	# use custom linker script
-	if (MACHIKANIA_WIFI STREQUAL "withwifi") 
-		pico_set_linker_script(phyllosoma_kb ${CMAKE_CURRENT_SOURCE_DIR}/wifi/memmap_machikania.ld)
-		pico_set_linker_script(phyllosoma ${CMAKE_CURRENT_SOURCE_DIR}/wifi/memmap_machikania.ld)
-	elseif(PICO_PLATFORM STREQUAL "rp2350-arm-s")
+	if(PICO_PLATFORM STREQUAL "rp2350-arm-s")
 		pico_set_linker_script(phyllosoma_kb ${CMAKE_CURRENT_SOURCE_DIR}/memmap_machikania_pico2.ld)
 		pico_set_linker_script(phyllosoma ${CMAKE_CURRENT_SOURCE_DIR}/memmap_machikania_pico2.ld)
 	else()
@@ -163,6 +160,9 @@ if (TARGET tinyusb_device)
 		target_compile_definitions(wifi_files PUBLIC PICO_STACK_SIZE=4096)
 		target_compile_definitions(wifi_files PUBLIC PICO_HEAP_SIZE=4096)
 		#target_compile_definitions(wifi_files PRIVATE machikania_dummy=6)
+	endif()
+	if(PICO_PLATFORM STREQUAL "rp2350-arm-s")
+		add_compile_definitions(PICO_PLATFORM_RP2350)
 	endif()
 	
 elseif(PICO_ON_DEVICE)
