Enable the change of UART pins in MACHIKAP.INI

--- a/scripts/MACHIKAP.INI
+++ b/scripts/MACHIKAP.INI
@@ -78,13 +78,30 @@ CAPSLOCK    # Caps Lock Key
 # SCRLLOCK    # Scroll Lock Key
 
 
-# Specify SPI pins used for embed projects
+# Specify SPI pins
 # Comment out for default settings
 # Useful for small RP2040 boards like XIAO RP2040, RP2040-Zero, and Tiny-2040
+# Valid values for SPIMISO:  0,  4, 16, 20 (SPI0)
+#                  SPIMISO:  8, 12, 24, 28 (SPI1)
+# Valid values for SPIMOSI:  3,  7, 19, 23 (SPI0)
+#                  SPIMOSI: 11, 15, 27     (SPI1)
+# Valid values for SPICLK:   2,  6, 18, 22 (SPI0)
+#                  SPICLK:  10, 14, 26     (SPI1)
 
 # SPIMISO=4
 # SPIMOSI=7
 # SPICLK=6
+
+
+# Specify UART pins
+# Comment out for default settings
+# Valid values for UARTTX: 0, 12, 16, 28 (UART0)
+#                  UARTTX: 4,  8, 20, 24 (UART1)
+# Valid values for UARTRX: 1, 13, 17, 29 (UART0)
+#                  UARTRX: 5,  9, 21, 25 (UART1)
+
+# UARTTX=0
+# UARTRX=1
 
 
 # Use Real Time Clock (RTC) for saving files by file system
