Enable the change of I2C pins in MACHIKAP.INI

--- a/scripts/MACHIKAP.INI
+++ b/scripts/MACHIKAP.INI
@@ -104,6 +104,17 @@ CAPSLOCK    # Caps Lock Key
 # UARTRX=1
 
 
+# Specify I2C pins
+# Comment out for default settings
+# Valid values for I2CSDA: 0,  4,  8, 12, 16, 20, 24, 28 (I2C0)
+#                  I2CSDA: 1,  5,  9, 13, 17, 21, 25, 29 (I2C1)
+# Valid values for I2CSCL: 2,  6, 10, 14, 18, 22, 26     (I2C0)
+#                  I2CSCL: 3,  7, 11, 15, 19, 23, 27     (I2C1)
+
+# I2CSDA=0
+# I2CSCL=1
+
+
 # Use Real Time Clock (RTC) for saving files by file system
 # If RTC is not use, timestamp of save file will be 2020/01/01
 # Remove comment to enable RTC for file system in following line
