Correct port numbers for I2C

--- a/scripts/MACHIKAP.INI
+++ b/scripts/MACHIKAP.INI
@@ -107,8 +107,8 @@ CAPSLOCK    # Caps Lock Key
 # Specify I2C pins
 # Comment out for default settings
 # Valid values for I2CSDA: 0,  4,  8, 12, 16, 20, 24, 28 (I2C0)
-#                  I2CSDA: 1,  5,  9, 13, 17, 21, 25, 29 (I2C1)
-# Valid values for I2CSCL: 2,  6, 10, 14, 18, 22, 26     (I2C0)
+#                  I2CSDA: 2,  6, 10, 14, 18, 22, 26     (I2C1)
+# Valid values for I2CSCL: 1,  5,  9, 13, 17, 21, 25, 29 (I2C0)
 #                  I2CSCL: 3,  7, 11, 15, 19, 23, 27     (I2C1)
 
 # I2CSDA=0
