Use always system clock for SPI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -161,6 +161,7 @@ if (TARGET tinyusb_device)
 	endif()
 	
 	# set compile definitions
+	add_compile_definitions(PICO_CLOCK_ADJUST_PERI_CLOCK_WITH_SYS_CLOCK=1)
 	add_compile_definitions(MACHIKANIA_CONFIG="./config/${MACHIKANIA_BUILD}.h")
 	if (MACHIKANIA_DEBUG_MODE)
 		add_compile_definitions(MACHIKANIA_DEBUG_MODE)
