Enable WIDTH42 and WIDTH80 in MACHIKAP.INI

--- a/scripts/MACHIKAP.INI
+++ b/scripts/MACHIKAP.INI
@@ -14,6 +14,12 @@ HORIZONTAL # same as LCD0TURN
 # LCD90TURN
 
 
+# Setup Initial Text width (42 or 80 for Type PU)
+
+# WIDTH42
+# WIDTH80
+
+
 # Decide if rotate button asignment when LCD vertical setting
 
 ROTATEBUTTONS
